# discrete-homology

./: .gitignore  CLAUDE.md  Cargo.toml  assistant.md
benches/: maps_naive.rs
src/: graph.rs  lib.rs  main.rs  shape.rs
src/graph_maps/: cube_isomorphism.rs  cube_maps.rs  mod.rs  permutation_generator.rs  stack_map.rs
src/graphs/: cube.rs  extras.rs  graph_map.rs  mod.rs
