[package]
name = "discrete-homology"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = "1.4.2"
arbtest = "0.3.2"


[package.metadata.docs.rs]
features = ["nightly"]


[features]
default = []
nightly = []

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "maps_naive"
harness = false
